(deprecated) gatekeeper/argocd-server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd-server
  namespace: argocd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-server
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: argocd-server
              topologyKey: kubernetes.io/hostname
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/part-of: argocd
              topologyKey: kubernetes.io/hostname
            weight: 5
      containers:
      - name: gatekeeper
        image: quay.io/keycloak/keycloak-gatekeeper:10.0.0
        imagePullPolicy: Always
        args:
        - --client-id=argocd
        - --client-secret=f1512155-8282-451a-9e61-40b886b17deb
        - --listen=:3000
        - --upstream-url=http://127.0.0.1:8080
        - --discovery-url=https://hyperauth.ckcloud.org/auth/realms/tmax
        - --secure-cookie=true
        - --skip-openid-provider-tls-verify=true
        - --enable-self-signed-tls=false
        - --tls-cert=/etc/secrets/tls.crt
        - --tls-private-key=/etc/secrets/tls.key
        - --tls-ca-certificate=/etc/secrets/ca.crt
        - --skip-upstream-tls-verify=true
        - --upstream-keepalives=false
        - --enable-default-deny=true
        - --enable-refresh-tokens=true
        - --enable-metrics=true
        - --encryption-key=AgXa7xRcoClDEU0ZDSH4X0XhL5Qy2Z2j
        - --forbidden-page=/html/access-forbidden.html
        - --resources=uri=/*|roles=argocd:argocd-manager
        - --enable-encrypted-token
        - --verbose
        ports:
        - containerPort: 3000
          name: gatekeeper
        volumeMounts:
        - name: gatekeeper-files
          mountPath: /html
        - name: secret
          mountPath: /etc/secrets
          readOnly: true
      - command:
        - argocd-server
        - --staticassets
        - /shared/app
        - --insecure
        image: quay.io/argoproj/argocd:v2.2.2
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz?full=true
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 30
        name: argocd-server
        ports:
        - containerPort: 8080
        - containerPort: 8083
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 30
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        volumeMounts:
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        - mountPath: /app/config/tls
          name: tls-certs
        - mountPath: /app/config/server/tls
          name: argocd-repo-server-tls
        - mountPath: /home/argocd
          name: plugins-home
        - mountPath: /tmp
          name: tmp
      serviceAccountName: argocd-server
      volumes:
      - emptyDir: {}
        name: plugins-home
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: static-files
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
      - configMap:
          name: argocd-tls-certs-cm
        name: tls-certs
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
      - name: secret
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-server-tls-secret
      - name: gatekeeper-files
        configMap:
          name: gatekeeper-files
---
