(deprecated) gatekeeper/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd-ingressroute.ckcloud.org`) # 적당한 도메인으로 바꿔야 함
      priority: 10
      services:
        - name: argocd-server
          port: https
          serversTransport: insecure@file
    - kind: Rule
      match: Host(`argocd-ingressroute.ckcloud.org`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: https
          scheme: h2c
          serversTransport: insecure@file
  tls: {}
